[tool.poetry]
name = "mytd"
version = "0.0.21"
description = "My Youtube Downloader"
authors = ["Johan Wassberg <johan@rymdvarel.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
feedparser = "^6.0.10"
yt-dlp = "^2023.2.17"
pyTelegramBotAPI = "^4.10.0"
persist-queue = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
