[tool.poetry]
name = "mytd"
version = "0.0.21"
description = "My Youtube Downloader"
authors = ["Johan Wassberg <johan@rymdvarel.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
feedparser = "^6.0.11"
yt-dlp = "^2024.07.02"
pyTelegramBotAPI = "^4.20.0"
persist-queue = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
