[project]
name = "mytd"
version = "0.0.0"
description = "My Youtube Downloader"
authors = [{ name = "Johan Wassberg", email = "johan@rymdvarel.se" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "requests>=2.32.2,<3",
    "feedparser>=6.0.11,<7",
    "yt-dlp>=2025.1.15,<2029",
    "pyTelegramBotAPI>=4.20.0,<5",
    "persist-queue>=1.0.0,<2",
    "flask>=3.1.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
